<resources>
    <string name="app_name">Eraser Map</string>
    <string name="action_search">Search</string>
    <string name="action_clear">Erase History</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_all">View All</string>
    <string name="no_recent_searches">No recent searches</string>
    <string name="no_results_found">No results found</string>
    <string name="search_results_indicator">%1$d of %2$d results</string>
    <string name="search_results">Search Results</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="instruction_list">Instructions</string>
    <string name="from_text">From: </string>
    <string name="to_text">To: </string>
    <string name="current_location">Current Location</string>
    <string name="update_message">Your application is out of date and requires an update.</string>
    <string name="manifest_error">Unable to start application due to a server error. Try again later.</string>
    <string name="accept_update">Update Now</string>
    <string name="decline_update">Exit Application</string>
    <string name="settings">Settings</string>
    <string name="resume">Resume</string>
    <string name="view_list">View Directions</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="exit_navigation">Exit Navigation</string>
    <string name="destination">Destination</string>

    <string name="milestone_two_mile">In two miles</string>
    <string name="milestone_one_mile">In one mile</string>
    <string name="milestone_quarter_mile">In a quarter mile</string>
    <string name="milestone_three_km">In three kilometers</string>
    <string name="milestone_one_and_a_half_km">In one and a half kilometers</string>
    <string name="milestone_half_km">In a half kilometer</string>

    <string name="less_than_one_minute">&lt;1 min</string>
    <string name="diamond_separator">" ◆ "</string>

    <string name="debug_settings_toast_title">Debug Menu %s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="history_erased">History Erased</string>
    <string name="cache_search_results_status">Cache Search Results %s</string>
    <string name="rerouting">Rerouting</string>

    <string name="need_permissions">Turn on location permissions in your system settings menu</string>
    <string name="search_hint">Search for place or address</string>
    <string name="edittext_tangram_version_title">Tangram Version</string>

    <string name="comma">,</string>
    <string name="stops">stops</string>
    <string name="transit_time">(%s)</string>
    <string name="station">Station</string>
    <string name="no_route_found">No route found</string>
    <string name="try_another_mode">Try a different mode?</string>

    <string name="location_required_title">Location Required</string>
    <string name="location_required_msg">Location must be enabled to load the route preview. Would you like to update your location settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
