<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.mapzen.erasermap">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="com.mapzen.pelias.widget.PeliasSearchView" />

    <item
        android:id="@+id/action_view_all"
        android:title="@string/action_view_all"
        android:icon="@drawable/ic_action_view_all_normal"
        android:visible="false"
        app:showAsAction="always" />

    <group android:id="@+id/menu_overflow">
        <item
            android:id="@+id/action_clear"
            android:title="@string/action_clear"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_restyle"
            android:title="@string/action_restyle"
            app:showAsAction="never" />
    </group>
</menu>
